# ai-platform

./: .env.example  .gitignore  HANDOFF.md  README.md  docker-compose.dev.yml  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
.claude/: machine_path_backup_20260422_080449.txt  settings.json
electron/: main.ts  preload.ts
electron/ark/: client.ts  encode.ts  errors.ts  (+3 more)
scripts/: smoke-ark.mjs
server/: Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260426_0001_initial.py  20260523_0002_user_profile_fields.py  20260523_0003_add_collaborations.py
server/app/: config.py  main.py
server/app/ark/: builder.py  client.py  errors.py  poller.py  types.py
server/app/auth/: crypto.py  deps.py  routes.py  schemas.py  security.py
server/app/db/: session.py  sync_session.py
server/app/models/: __init__.py  asset.py  collaboration.py  enums.py  event.py  task.py  tenant.py  user.py
server/app/realtime/: publisher.py
server/app/routes/: collaborations.py  tasks.py  tenants.py  users.py
server/app/schemas/: collaborations.py  tasks.py  users.py
server/app/workers/: celery_app.py  tasks.py
server/scripts/: smoke_e2e.py  verify_phase0.py  verify_phase1.py
server/tests/: conftest.py  test_ark_builder.py  test_ark_client.py  test_ark_errors.py  test_ark_poller.py
src/: App.tsx  index.css  index.html
web/: .env.example  API.md  README.md  package-lock.json  package.json  prisma.config.ts
(+154 files in other folders)
